# life-expectancy

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
life_expectancy/: cleaning.py  data_io.py  data_strategies.py  io.py  main.py  regions.py
life_expectancy/tests/: conftest.py  test_cleaning.py  test_data_io.py  test_pyproject.py  test_regions.py
life_expectancy/tests/fixtures/: eu_life_expectancy_expected.csv  eu_life_expectancy_raw.tsv  pt_life_expectancy_expected.csv
