[project]
name = "life_expectancy"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
description = "First assignment of the Foundations Learning Path"
authors = [{name="Francisco Silva", email="francisco.silva@ren.pt"}]

dependencies = [
  "pandas"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "pytest-cov",
    "toml",
    "black",
    "pre-commit"
]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.pylint."messages control"]
disable = [
   "missing-module-docstring",
   "no-value-for-parameter",
   "too-few-public-methods"
]
max-line-length = 100

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
omit = [
    "*/conftest.py", "*/test*", # omit test files
]

[tool.coverage.report]
fail_under = 80

[tool.setuptools]
packages = ["life_expectancy"]

[project.scripts]
life-expectancy = "life_expectancy.main:main"
